# purrge

./: BUGS_AND_TODO.md  Cargo.toml  DESIGN_DOC.md  README.md  SESSION_STATE.md  TODO_PRODUCTION.md
src/: apartment.rs  furniture.rs  hud.wgsl  main.rs  mesh_shader.wgsl  render.rs  shader.wgsl
src/core/: attachment.rs  backend.rs  body.rs  destruction.rs  entity.rs  ik.rs  material.rs  meshing.rs  mod.rs  procgen.rs  render_mesh.rs  sdf_body.rs  skeleton.rs  streaming.rs  svo.rs
src/game/: dog.rs  items.rs  meters.rs  mod.rs  physics.rs  scoring.rs  timer.rs
