[package]
name = "purrge"
version = "0.1.0"
edition = "2021"
description = "PURRGE — Kawaii voxel cat destroys everything"
authors = ["Eugene Lyssovsky", "Lara (AI)"]

[dependencies]
wgpu = "24"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
